Keep native file tools compatible with Android 8